# the-agent-times

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FAQ.md  LICENSE  README.md  ROADMAP.md  TECH_STACK.md  The-Agent-Times.desktop  docker-compose.yml  pyproject.toml  state.md
docs/: evaluation.md
docs/architecture/: architecture.md
docs/media/: page@17cb11a711e4d43a7023710d244e4056.webm
frontend/: app.py  config.py  launch.sh  requirements.txt  wsgi.py
frontend/static/: layouts.css  style.css  themes.css
frontend/templates/: article.html  base.html  index.html  macros.html  refresh.html
publication-layouts/axios/: research.md
publication-layouts/guardian/: research.md
scripts/: article_scraper.py  autoreport_daily.sh  autoreport_fnb.sh  autoreport_github.sh  autoreport_international.sh  config.py  daily_briefing.py  fnb_market_report.py  github_article_writer.py  github_radar.py  international_news.py  legal_tax_guide.py  run_and_save.py  tech_news.py  website_cloner.py
scripts/layout-engine/: engine.py  generate_css.py  registry.py
scripts/lib/: article_writer.py  browser_scraper.py  rss.py  storage.py  translate.py
skills/business/news-web-design/: SKILL.md
skills/business/news-web-design/references/: article-html-cleaning-pipeline.md  gsap-patterns.md  (+13 more)
skills/business/vietnam-business-regulations/: SKILL.md
skills/design/design-master/: SKILL.md
skills/software-development/website-cloner/: SKILL.md
tests/: conftest.py  test_app.py  test_article_scraper.py  test_article_writer.py  test_storage.py
(+9 files in other folders)
